--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/BubleDevelopers/buble-server",
   "dependencies": {
     "express": "^4.12.3",
+    "mongoose": "^4.0.3",
     "request": "^2.55.0"
   }
 }
