--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RESTful API server for Buble",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "test"
   },
   "repository": {
@@ -25,5 +25,8 @@
     "express": "^4.12.3",
     "mongoose": "^4.0.5",
     "request": "^2.55.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.3.7"
   }
 }
