--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.13.1",
     "express": "^4.12.3",
+    "lodash": "^3.10.0",
     "mongoose": "^4.0.5",
     "request": "^2.55.0"
   },
