--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/BubleDevelopers/buble-server",
   "dependencies": {
     "body-parser": "^1.13.1",
+    "cors": "^2.7.1",
     "express": "^4.12.3",
     "lodash": "^3.10.0",
     "mongoose": "^4.0.5",
