--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "body-parser": "^1.13.1",
     "cors": "^2.7.1",
     "express": "^4.12.3",
+    "express-session": "^1.11.3",
     "lodash": "^3.10.0",
     "mongoose": "^4.0.5",
+    "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
     "request": "^2.55.0"
   },
   "devDependencies": {
