--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/BubleDevelopers/buble-server",
   "dependencies": {
     "body-parser": "^1.13.1",
+    "connect-mongo": "^0.8.2",
+    "cookie-parser": "^1.3.5",
     "cors": "^2.7.1",
     "express": "^4.12.3",
     "express-session": "^1.11.3",
